--- a/HTML form.html
+++ b/HTML form.html
@@ -23,13 +23,13 @@
         /* Style du formulaire */
         .contact-us {
             background: #f8f4e5;
-            padding: 20px;
+            padding: 5%;
             border: 2px solid black;
             box-shadow: 15px 15px 1px #ffa580, 15px 15px 1px 2px black;
             font-family: 'Fjalla One', sans-serif;
             text-align: center;
             width: 90%;
-            max-width: 400px;
+            max-width: 500px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -49,18 +49,18 @@
         }
 
         .question label {
-            font-size: 20pt;
-            margin-bottom: 20px;
+            font-size: 5vw;
+            margin-bottom: 5%;
         }
 
         .question input {
-            padding: 15px;
-            font-size: 16pt;
+            padding: 3%;
+            font-size: 4vw;
             border: 2px solid black;
             box-shadow: 3px 3px 1px black;
             width: 100%;
             max-width: 300px;
-            margin-bottom: 20px;
+            margin-bottom: 5%;
         }
 
         .btn-group, .question input {
@@ -71,11 +71,11 @@
             display: flex;
             justify-content: center;
             gap: 10px;
-            margin-top: 20px;
+            margin-top: 5%;
         }
 
         .select-btn {
-            padding: 15px 25px;
+            padding: 3% 6%;
             background: #ff6f61;
             color: white;
             font-weight: bold;
@@ -83,6 +83,7 @@
             cursor: pointer;
             transition: 0.2s all ease-in-out;
             box-shadow: 3px 3px 1px black;
+            font-size: 4vw;
         }
 
         .select-btn.selected {
@@ -94,15 +95,15 @@
             display: flex;
             justify-content: space-between;
             position: absolute;
-            bottom: 20px;
+            bottom: 5%;
             left: 50%;
             transform: translateX(-50%);
             width: 90%;
         }
 
         .nav-btn {
-            padding: 15px 30px;
-            font-size: 16pt;
+            padding: 3% 6%;
+            font-size: 4vw;
             background: #ffa580;
             border: 1px solid black;
             cursor: pointer;
@@ -116,8 +117,8 @@
         }
 
         .submit-btn {
-            padding: 15px 30px;
-            font-size: 16pt;
+            padding: 3% 6%;
+            font-size: 4vw;
             background: #ffa580;
             border: 1px solid black;
             cursor: pointer;
@@ -132,60 +133,59 @@
 
         .error-message {
             color: red;
-            font-size: 14pt;
-            margin-top: 10px;
+            font-size: 3.5vw;
+            margin-top: 3%;
             display: none;
         }
 
         /* Styles spécifiques pour les deux premières questions */
         .question:nth-child(1) label,
         .question:nth-child(2) label {
-            font-size: 24pt; /* Texte plus gros */
+            font-size: 6vw; /* Texte plus gros */
         }
 
         .question:nth-child(1) input,
         .question:nth-child(2) input {
-            font-size: 18pt; /* Texte dans la boîte plus gros */
-            padding: 20px; /* Boîte plus grande */
+            font-size: 5vw; /* Texte dans la boîte plus gros */
+            padding: 4%; /* Boîte plus grande */
             border-radius: 10px; /* Coins arrondis */
             border: 3px solid black; /* Bordure plus épaisse */
         }
 
-        /* Media queries pour les écrans de petite taille */
-        @media (max-width: 600px) {
-            .contact-us {
-                padding: 15px;
-                width: 95%;
-            }
-
+        /* Media queries pour les grands écrans */
+        @media (min-width: 600px) {
             .question label {
-                font-size: 18pt;
+                font-size: 24px;
             }
 
             .question input {
-                font-size: 14pt;
-                padding: 10px;
+                font-size: 18px;
+                padding: 15px;
             }
 
             .select-btn {
-                padding: 10px 20px;
-                font-size: 14pt;
+                font-size: 18px;
+                padding: 15px 25px;
             }
 
-            .nav-btn {
-                padding: 10px 20px;
-                font-size: 14pt;
+            .nav-btn, .submit-btn {
+                font-size: 18px;
+                padding: 15px 25px;
+            }
+
+            .error-message {
+                font-size: 16px;
             }
 
             .question:nth-child(1) label,
             .question:nth-child(2) label {
-                font-size: 20pt;
+                font-size: 24px;
             }
 
             .question:nth-child(1) input,
             .question:nth-child(2) input {
-                font-size: 16pt;
-                padding: 15px;
+                font-size: 18px;
+                padding: 20px;
             }
         }
     </style>
