--- a/HTML form.html
+++ b/HTML form.html
@@ -78,7 +78,7 @@
         }
 
         .select-btn {
-            padding: 6% 12%; /* Boutons encore plus grands */
+            padding: 5% 8%; /* Ajustement du padding */
             background: #ff6f61;
             color: white;
             font-weight: bold;
@@ -86,9 +86,9 @@
             cursor: pointer;
             transition: 0.2s all ease-in-out;
             box-shadow: 3px 3px 1px black;
-            font-size: 6vmin; /* Taille encore plus grande */
+            font-size: 5vmin; /* Taille légèrement réduite pour les petits écrans */
             border-radius: 20px; /* Coins arrondis */
-            min-width: 150px; /* Largeur minimale pour éviter un écrasement */
+            min-width: 120px; /* Largeur minimale pour éviter un écrasement */
         }
 
         .select-btn.selected {
@@ -162,13 +162,13 @@
             }
 
             .select-btn {
-                font-size: 24px; /* Taille encore plus grande */
-                padding: 15px 30px;
+                font-size: 20px; /* Taille légèrement réduite pour les petits écrans */
+                padding: 15px 25px;
             }
 
             .nav-btn, .submit-btn {
                 font-size: 20px; /* Taille encore plus grande */
-                padding: 15px 30px;
+                padding: 15px 25px;
             }
 
             .error-message {
